# learnlang

./: .dockerignore  .gitignore  Dockerfile  README.md  he.py  langgraph.json  pyproject.toml  requirements.txt
app/: main.py
app/agents/: personal_clothing.py
app/api/v1/: chat.py  oss.py
app/common/: logger.py
app/models/: schemas.py
app/static/: 404.html  index.html  index.txt
app/static/_next/static/chunks/: 707-f5d3a8069b5e584c.js  main-app-2a3e850e615e276c.js  main-ec07284b78c56e31.js  webpack-e5e82665498ed906.js
app/static/_next/static/chunks/app/: layout-5d184cfa4c4b8900.js  page-585ed83624c99b99.js
app/static/_next/static/chunks/app/_not-found/: page-163cf8df179a7f5a.js
app/static/_next/static/css/: cbea68ea170de2ab.css
docs/superpowers/plans/: 2026-06-19-chat-stream-fix.md  2026-06-19-fashion-chat-frontend-redesign.md
docs/superpowers/progress/: fashion-chat-frontend-progress.md
docs/superpowers/specs/: 2026-06-19-chat-stream-fix-design.md  2026-06-19-fashion-chat-frontend-redesign.md
frontend/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/scripts/: deploy-static.ps1
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatComposer.tsx  ChatMessage.tsx  ChatShell.tsx  EmptyState.tsx  LoginModal.tsx  SiteHeader.tsx
frontend/src/lib/: api.ts  messages.ts  session.ts
frontend/src/tests/: ChatShell.test.tsx  LoginModal.test.tsx  api.test.ts
frontend/src/types/: chat.ts
tests/: test_api_routes.py
