[project]
name = "learnlang"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alibabacloud-oss-v2>=1.3.1",
    "community>=1.0.0b1",
    "dashscope>=1.25.23",
    "fastapi>=0.137.2",
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-deepseek>=1.1.0",
    "langchain-tavily>=0.2.18",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langgraph-cli[inmem]>=0.4.30",
    "notebook>=7.5.7",
    "openai>=2.42.0",
    "python-dotenv>=1.2.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
